k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: elcriollo
  labels:
    name: elcriollo
    app.kubernetes.io/name: elcriollo
    app.kubernetes.io/component: namespace
